styles/all/theme/pmbars.css
.pmbars-outer {
	background-color: #ebebeb;
	border-radius: 30px;
	width: 100%;
	height: 8px;
	margin: -8px 0 8px;
}

.pmbars-inner {
	text-align: right;
	background-color: #32cd32;
	background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
	background-size: 20px 20px;
	border-radius: 30px;
	width: 0;
	max-width: 100%;
	height: 100%;
}

.pmbars-danger {
	background-color: #f08080;
}

.rtl .pmbars-outer {
	text-align: right;
}

